tests/errors/1_lexical_errors/invalid_double-6.java
class Main {
    static void run() {
        double x = 1.5.5;
    }
}
